[gd_scene load_steps=32 format=3 uid="uid://5dneig8ei6xs"]

[ext_resource type="Script" path="res://scripts/ui/menu.gd" id="1_2ukjd"]
[ext_resource type="Texture2D" uid="uid://bvfyf487n0el3" path="res://assets/stars/black.png" id="2_l86e2"]
[ext_resource type="Texture2D" uid="uid://dlo8budwurb2l" path="res://assets/stars/space18.png" id="3_nlibr"]
[ext_resource type="Texture2D" uid="uid://dlymqfoneeg0" path="res://assets/stars/space22.png" id="4_ngsjk"]
[ext_resource type="Texture2D" uid="uid://b873cqo4f7aov" path="res://assets/stars/stars_tileset.webp" id="5_0erqn"]
[ext_resource type="Texture2D" uid="uid://m25rlxrddtii" path="res://assets/stars/2SPACETILESET2.png" id="6_hedch"]
[ext_resource type="Texture2D" uid="uid://c5m8gbofbgxgy" path="res://assets/stars/3SPACETILESET3.png" id="7_gx0jw"]
[ext_resource type="Texture2D" uid="uid://dhwalnol3cfkn" path="res://assets/stars/4SPACETILESET4.png" id="8_610fa"]
[ext_resource type="Texture2D" uid="uid://b8qh4u5bedogt" path="res://assets/stars/5SPACETILESET5.png" id="9_llbt5"]
[ext_resource type="AudioStream" uid="uid://c1gh5h513fpbh" path="res://assets/fire.wav" id="10_thh64"]
[ext_resource type="FontFile" uid="uid://s0362j5y7c1h" path="res://assets/font/hf/FutilePro.ttf" id="11_5bjlr"]
[ext_resource type="Texture2D" uid="uid://fl5bckc5nsox" path="res://assets/button/border.png" id="12_naqxq"]
[ext_resource type="Texture2D" uid="uid://t2jrn7hpo3o5" path="res://assets/ship/spaceship1.png" id="13_q5hjd"]
[ext_resource type="FontFile" uid="uid://ds4r3eag6aco3" path="res://assets/font/notjam/NotJamSciMono10.ttf" id="14_r6ymo"]
[ext_resource type="Texture2D" uid="uid://cu5o7a6obttd2" path="res://assets/ship/spaceship.webp" id="15_yq7xy"]
[ext_resource type="Texture2D" uid="uid://copck0acvkpuo" path="res://assets/ship/spaceship2.png" id="16_31hsw"]
[ext_resource type="Texture2D" uid="uid://duch4drp3gbmw" path="res://assets/ship/laser.webp" id="17_i84o2"]
[ext_resource type="Texture2D" uid="uid://b4k3grarllryj" path="res://assets/objects/asteroid12.png" id="18_ow1pk"]
[ext_resource type="Texture2D" uid="uid://ci7mp77u4ndw1" path="res://assets/objects/asteroid7.png" id="19_84kgb"]
[ext_resource type="Texture2D" uid="uid://c1tw01kwn0naq" path="res://assets/objects/asteroid1.png" id="20_bxfs2"]
[ext_resource type="PackedScene" uid="uid://b5bfc5c56k4fj" path="res://scenes/ui/credits.tscn" id="21_2kvha"]
[ext_resource type="PackedScene" uid="uid://dd8plwh1gg6kk" path="res://scenes/ui/settings.tscn" id="22_pserw"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_2vioj"]
texture = ExtResource("2_l86e2")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_vnty3"]
texture = ExtResource("3_nlibr")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_8fqw2"]
texture = ExtResource("4_ngsjk")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ng8xi"]
texture = ExtResource("5_0erqn")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_m7p6s"]
texture = ExtResource("6_hedch")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_lf8b3"]
texture = ExtResource("7_gx0jw")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ljtoj"]
texture = ExtResource("8_610fa")
0:0/0 = 0
0:1/0 = 0
0:2/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_3njcb"]
texture = ExtResource("9_llbt5")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0

[sub_resource type="TileSet" id="TileSet_xthyk"]
sources/0 = SubResource("TileSetAtlasSource_2vioj")
sources/1 = SubResource("TileSetAtlasSource_vnty3")
sources/2 = SubResource("TileSetAtlasSource_8fqw2")
sources/3 = SubResource("TileSetAtlasSource_ng8xi")
sources/4 = SubResource("TileSetAtlasSource_m7p6s")
sources/5 = SubResource("TileSetAtlasSource_lf8b3")
sources/6 = SubResource("TileSetAtlasSource_ljtoj")
sources/7 = SubResource("TileSetAtlasSource_3njcb")

[node name="Menu" type="Node"]
script = ExtResource("1_2ukjd")

[node name="MainMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0

[node name="Background" type="TileMap" parent="MainMenu"]
tile_set = SubResource("TileSet_xthyk")
format = 2
layer_0/name = "black"
layer_0/tile_data = PackedInt32Array(0, 65539, 0, 65536, 65539, 0, 131072, 65539, 0, 196608, 65539, 0, 262144, 65539, 0, 327680, 65539, 0, 393216, 65539, 0, 458752, 65539, 0, 524288, 65539, 0, 589824, 65539, 0, 655360, 65539, 0, 720896, 65539, 0, 786432, 65539, 0, 851968, 65539, 0, 917504, 65539, 0, 983040, 65539, 0, 1048576, 65539, 0, 1114112, 65539, 0, 1179648, 65539, 0, 1, 65539, 0, 65537, 65539, 0, 131073, 65539, 0, 196609, 65539, 0, 262145, 65539, 0, 327681, 65539, 0, 393217, 65539, 0, 458753, 65539, 0, 524289, 65539, 0, 589825, 65539, 0, 655361, 65539, 0, 720897, 65539, 0, 786433, 65539, 0, 851969, 65539, 0, 917505, 65539, 0, 983041, 65539, 0, 1048577, 65539, 0, 1114113, 65539, 0, 1179649, 65539, 0, 2, 65539, 0, 65538, 65539, 0, 131074, 65539, 0, 196610, 65539, 0, 262146, 65539, 0, 327682, 65539, 0, 393218, 65539, 0, 458754, 65539, 0, 524290, 65539, 0, 589826, 65539, 0, 655362, 65539, 0, 720898, 65539, 0, 786434, 65539, 0, 851970, 65539, 0, 917506, 65539, 0, 983042, 65539, 0, 1048578, 65539, 0, 1114114, 65539, 0, 1179650, 65539, 0, 3, 65539, 0, 65539, 65539, 0, 131075, 65539, 0, 196611, 65539, 0, 262147, 65539, 0, 327683, 65539, 0, 393219, 65539, 0, 458755, 65539, 0, 524291, 65539, 0, 589827, 65539, 0, 655363, 65539, 0, 720899, 65539, 0, 786435, 65539, 0, 851971, 65539, 0, 917507, 65539, 0, 983043, 65539, 0, 1048579, 65539, 0, 1114115, 65539, 0, 1179651, 65539, 0, 4, 65539, 0, 65540, 65539, 0, 131076, 65539, 0, 196612, 65539, 0, 262148, 65539, 0, 327684, 65539, 0, 393220, 65539, 0, 458756, 65539, 0, 524292, 65539, 0, 589828, 65539, 0, 655364, 65539, 0, 720900, 65539, 0, 786436, 65539, 0, 851972, 65539, 0, 917508, 65539, 0, 983044, 65539, 0, 1048580, 65539, 0, 1114116, 65539, 0, 1179652, 65539, 0, 5, 65539, 0, 65541, 65539, 0, 131077, 65539, 0, 196613, 65539, 0, 262149, 65539, 0, 327685, 65539, 0, 393221, 65539, 0, 458757, 65539, 0, 524293, 65539, 0, 589829, 65539, 0, 655365, 65539, 0, 720901, 65539, 0, 786437, 65539, 0, 851973, 65539, 0, 917509, 65539, 0, 983045, 65539, 0, 1048581, 65539, 0, 1114117, 65539, 0, 1179653, 65539, 0, 6, 65539, 0, 65542, 65539, 0, 131078, 65539, 0, 196614, 65539, 0, 262150, 65539, 0, 327686, 65539, 0, 393222, 65539, 0, 458758, 65539, 0, 524294, 65539, 0, 589830, 65539, 0, 655366, 65539, 0, 720902, 65539, 0, 786438, 65539, 0, 851974, 65539, 0, 917510, 65539, 0, 983046, 65539, 0, 1048582, 65539, 0, 1114118, 65539, 0, 1179654, 65539, 0, 7, 65539, 0, 65543, 65539, 0, 131079, 65539, 0, 196615, 65539, 0, 262151, 65539, 0, 327687, 65539, 0, 393223, 65539, 0, 458759, 65539, 0, 524295, 65539, 0, 589831, 65539, 0, 655367, 65539, 0, 720903, 65539, 0, 786439, 65539, 0, 851975, 65539, 0, 917511, 65539, 0, 983047, 65539, 0, 1048583, 65539, 0, 1114119, 65539, 0, 1179655, 65539, 0, 8, 65539, 0, 65544, 65539, 0, 131080, 65539, 0, 196616, 65539, 0, 262152, 65539, 0, 327688, 65539, 0, 393224, 65539, 0, 458760, 65539, 0, 524296, 65539, 0, 589832, 65539, 0, 655368, 65539, 0, 720904, 65539, 0, 786440, 65539, 0, 851976, 65539, 0, 917512, 65539, 0, 983048, 65539, 0, 1048584, 65539, 0, 1114120, 65539, 0, 1179656, 65539, 0, 9, 65539, 0, 65545, 65539, 0, 131081, 65539, 0, 196617, 65539, 0, 262153, 65539, 0, 327689, 65539, 0, 393225, 65539, 0, 458761, 65539, 0, 524297, 65539, 0, 589833, 65539, 0, 655369, 65539, 0, 720905, 65539, 0, 786441, 65539, 0, 851977, 65539, 0, 917513, 65539, 0, 983049, 65539, 0, 1048585, 65539, 0, 1114121, 65539, 0, 1179657, 65539, 0, 10, 65539, 0, 65546, 65539, 0, 131082, 65539, 0, 196618, 65539, 0, 262154, 65539, 0, 327690, 65539, 0, 393226, 65539, 0, 458762, 65539, 0, 524298, 65539, 0, 589834, 65539, 0, 655370, 65539, 0, 720906, 65539, 0, 786442, 65539, 0, 851978, 65539, 0, 917514, 65539, 0, 983050, 65539, 0, 1048586, 65539, 0, 1114122, 65539, 0, 1179658, 65539, 0, 11, 65539, 0, 65547, 65539, 0, 131083, 65539, 0, 196619, 65539, 0, 262155, 65539, 0, 327691, 65539, 0, 393227, 65539, 0, 458763, 65539, 0, 524299, 65539, 0, 589835, 65539, 0, 655371, 65539, 0, 720907, 65539, 0, 786443, 65539, 0, 851979, 65539, 0, 917515, 65539, 0, 983051, 65539, 0, 1048587, 65539, 0, 1114123, 65539, 0, 1179659, 65539, 0, 12, 65539, 0, 65548, 65539, 0, 131084, 65539, 0, 196620, 65539, 0, 262156, 65539, 0, 327692, 65539, 0, 393228, 65539, 0, 458764, 65539, 0, 524300, 65539, 0, 589836, 65539, 0, 655372, 65539, 0, 720908, 65539, 0, 786444, 65539, 0, 851980, 65539, 0, 917516, 65539, 0, 983052, 65539, 0, 1048588, 65539, 0, 1114124, 65539, 0, 1179660, 65539, 0, 13, 65539, 0, 65549, 65539, 0, 131085, 65539, 0, 196621, 65539, 0, 262157, 65539, 0, 327693, 65539, 0, 393229, 65539, 0, 458765, 65539, 0, 524301, 65539, 0, 589837, 65539, 0, 655373, 65539, 0, 720909, 65539, 0, 786445, 65539, 0, 851981, 65539, 0, 917517, 65539, 0, 983053, 65539, 0, 1048589, 65539, 0, 1114125, 65539, 0, 1179661, 65539, 0, 14, 65539, 0, 65550, 65539, 0, 131086, 65539, 0, 196622, 65539, 0, 262158, 65539, 0, 327694, 65539, 0, 393230, 65539, 0, 458766, 65539, 0, 524302, 65539, 0, 589838, 65539, 0, 655374, 65539, 0, 720910, 65539, 0, 786446, 65539, 0, 851982, 65539, 0, 917518, 65539, 0, 983054, 65539, 0, 1048590, 65539, 0, 1114126, 65539, 0, 1179662, 65539, 0, 15, 65539, 0, 65551, 65539, 0, 131087, 65539, 0, 196623, 65539, 0, 262159, 65539, 0, 327695, 65539, 0, 393231, 65539, 0, 458767, 65539, 0, 524303, 65539, 0, 589839, 65539, 0, 655375, 65539, 0, 720911, 65539, 0, 786447, 65539, 0, 851983, 65539, 0, 917519, 65539, 0, 983055, 65539, 0, 1048591, 65539, 0, 1114127, 65539, 0, 1179663, 65539, 0, 16, 65539, 0, 65552, 65539, 0, 131088, 65539, 0, 196624, 65539, 0, 262160, 65539, 0, 327696, 65539, 0, 393232, 65539, 0, 458768, 65539, 0, 524304, 65539, 0, 589840, 65539, 0, 655376, 65539, 0, 720912, 65539, 0, 786448, 65539, 0, 851984, 65539, 0, 917520, 65539, 0, 983056, 65539, 0, 1048592, 65539, 0, 1114128, 65539, 0, 1179664, 65539, 0, 17, 65539, 0, 65553, 65539, 0, 131089, 65539, 0, 196625, 65539, 0, 262161, 65539, 0, 327697, 65539, 0, 393233, 65539, 0, 458769, 65539, 0, 524305, 65539, 0, 589841, 65539, 0, 655377, 65539, 0, 720913, 65539, 0, 786449, 65539, 0, 851985, 65539, 0, 917521, 65539, 0, 983057, 65539, 0, 1048593, 65539, 0, 1114129, 65539, 0, 1179665, 65539, 0, 18, 65539, 0, 65554, 65539, 0, 131090, 65539, 0, 196626, 65539, 0, 262162, 65539, 0, 327698, 65539, 0, 393234, 65539, 0, 458770, 65539, 0, 524306, 65539, 0, 589842, 65539, 0, 655378, 65539, 0, 720914, 65539, 0, 786450, 65539, 0, 851986, 65539, 0, 917522, 65539, 0, 983058, 65539, 0, 1048594, 65539, 0, 1114130, 65539, 0, 1179666, 65539, 0, 19, 65539, 0, 65555, 65539, 0, 131091, 65539, 0, 196627, 65539, 0, 262163, 65539, 0, 327699, 65539, 0, 393235, 65539, 0, 458771, 65539, 0, 524307, 65539, 0, 589843, 65539, 0, 655379, 65539, 0, 720915, 65539, 0, 786451, 65539, 0, 851987, 65539, 0, 917523, 65539, 0, 983059, 65539, 0, 1048595, 65539, 0, 1114131, 65539, 0, 1179667, 65539, 0, 20, 65539, 0, 65556, 65539, 0, 131092, 65539, 0, 196628, 65539, 0, 262164, 65539, 0, 327700, 65539, 0, 393236, 65539, 0, 458772, 65539, 0, 524308, 65539, 0, 589844, 65539, 0, 655380, 65539, 0, 720916, 65539, 0, 786452, 65539, 0, 851988, 65539, 0, 917524, 65539, 0, 983060, 65539, 0, 1048596, 65539, 0, 1114132, 65539, 0, 1179668, 65539, 0, 21, 65539, 0, 65557, 65539, 0, 131093, 65539, 0, 196629, 65539, 0, 262165, 65539, 0, 327701, 65539, 0, 393237, 65539, 0, 458773, 65539, 0, 524309, 65539, 0, 589845, 65539, 0, 655381, 65539, 0, 720917, 65539, 0, 786453, 65539, 0, 851989, 65539, 0, 917525, 65539, 0, 983061, 65539, 0, 1048597, 65539, 0, 1114133, 65539, 0, 1179669, 65539, 0, 22, 65539, 0, 65558, 65539, 0, 131094, 65539, 0, 196630, 65539, 0, 262166, 65539, 0, 327702, 65539, 0, 393238, 65539, 0, 458774, 65539, 0, 524310, 65539, 0, 589846, 65539, 0, 655382, 65539, 0, 720918, 65539, 0, 786454, 65539, 0, 851990, 65539, 0, 917526, 65539, 0, 983062, 65539, 0, 1048598, 65539, 0, 1114134, 65539, 0, 1179670, 65539, 0, 23, 65539, 0, 65559, 65539, 0, 131095, 65539, 0, 196631, 65539, 0, 262167, 65539, 0, 327703, 65539, 0, 393239, 65539, 0, 458775, 65539, 0, 524311, 65539, 0, 589847, 65539, 0, 655383, 65539, 0, 720919, 65539, 0, 786455, 65539, 0, 851991, 65539, 0, 917527, 65539, 0, 983063, 65539, 0, 1048599, 65539, 0, 1114135, 65539, 0, 1179671, 65539, 0, 24, 65539, 0, 65560, 65539, 0, 131096, 65539, 0, 196632, 65539, 0, 262168, 65539, 0, 327704, 65539, 0, 393240, 65539, 0, 458776, 65539, 0, 524312, 65539, 0, 589848, 65539, 0, 655384, 65539, 0, 720920, 65539, 0, 786456, 65539, 0, 851992, 65539, 0, 917528, 65539, 0, 983064, 65539, 0, 1048600, 65539, 0, 1114136, 65539, 0, 1179672, 65539, 0)
layer_1/name = "star"
layer_1/tile_data = PackedInt32Array(983044, 131075, 0, 589844, 131075, 0, 262149, 131075, 0, 131090, 131075, 0, 983057, 131075, 0, 720906, 131075, 0)
layer_2/name = "starry"
layer_2/tile_data = PackedInt32Array(851973, 2, 0, 524296, 2, 0, 393236, 2, 0, 1114136, 2, 0, 65537, 1, 0, 1114113, 1, 0, 131095, 1, 0, 524291, 3, 2, 196620, 3, 2, 917526, 3, 2, 1048587, 65539, 1, 655379, 131075, 2, 327684, 131075, 2, 589837, 6, 0, 589835, 6, 2, 720910, 65541, 1, 1179667, 65541, 1, 589847, 65541, 1, 262158, 65541, 1, 65547, 65541, 1, 196615, 65541, 1, 1179651, 5, 2, 983041, 5, 2, 851971, 5, 2, 655362, 5, 2, 589831, 5, 2, 196611, 5, 2, 65543, 5, 2, 196625, 5, 2, 393233, 5, 2, 131092, 5, 2, 1114134, 5, 2, 851991, 5, 2, 720913, 5, 2, 524304, 5, 2, 851980, 5, 0, 983049, 5, 0, 1048590, 5, 0, 851983, 5, 0, 851985, 5, 0, 458773, 5, 0, 327697, 5, 0, 65551, 5, 0, 196617, 5, 0, 65542, 5, 0, 262155, 5, 0, 1048582, 5, 0, 786439, 5, 0, 655366, 5, 0, 458759, 5, 0, 393225, 5, 0, 393228, 4, 0, 983053, 4, 0, 1179662, 4, 0, 1179658, 4, 0, 1114129, 4, 0, 917523, 4, 0, 1179655, 131076, 2, 851976, 131076, 2, 327702, 131076, 2, 262163, 131076, 0, 65558, 131076, 0, 65550, 131076, 0)

[node name="Buttons" type="Control" parent="MainMenu"]
layout_mode = 3
anchors_preset = 0

[node name="Play" type="Button" parent="MainMenu/Buttons"]
layout_mode = 0
offset_left = 10.0
offset_top = 133.0
offset_right = 83.0
offset_bottom = 161.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="MainMenu/Buttons/Play"]
layout_mode = 0
offset_left = 4.0
offset_right = 72.0
offset_bottom = 25.0
theme_override_fonts/font = ExtResource("11_5bjlr")
theme_override_font_sizes/font_size = 28
text = "PLAY"

[node name="TextureRect" type="TextureRect" parent="MainMenu/Buttons/Play"]
layout_mode = 0
offset_left = -2.0
offset_top = -1.0
offset_right = 68.0
offset_bottom = 29.0
texture = ExtResource("12_naqxq")

[node name="Credits" type="Button" parent="MainMenu/Buttons"]
layout_mode = 0
offset_left = 10.0
offset_top = 161.0
offset_right = 133.0
offset_bottom = 188.0

[node name="Label2" type="Label" parent="MainMenu/Buttons/Credits"]
layout_mode = 0
offset_left = 2.0
offset_right = 122.0
offset_bottom = 25.0
theme_override_fonts/font = ExtResource("11_5bjlr")
theme_override_font_sizes/font_size = 28
text = "CREDITS"

[node name="TextureRect2" type="TextureRect" parent="MainMenu/Buttons/Credits"]
layout_mode = 0
offset_left = -2.0
offset_right = 68.0
offset_bottom = 25.0
texture = ExtResource("12_naqxq")

[node name="Settings" type="Button" parent="MainMenu/Buttons"]
layout_mode = 0
offset_left = 10.0
offset_top = 188.0
offset_right = 153.0
offset_bottom = 210.0

[node name="TextureRect" type="TextureRect" parent="MainMenu/Buttons/Settings"]
layout_mode = 0
offset_left = -2.0
offset_top = -2.0
offset_right = 68.0
offset_bottom = 23.0
texture = ExtResource("12_naqxq")

[node name="Label3" type="Label" parent="MainMenu/Buttons/Settings"]
layout_mode = 0
offset_left = 4.0
offset_top = -3.0
offset_right = 142.0
offset_bottom = 22.0
theme_override_fonts/font = ExtResource("11_5bjlr")
theme_override_font_sizes/font_size = 28
text = "SETTINGS
"

[node name="Leave" type="Button" parent="MainMenu/Buttons"]
layout_mode = 0
offset_left = 10.0
offset_top = 210.0
offset_right = 98.0
offset_bottom = 231.0

[node name="Label3" type="Label" parent="MainMenu/Buttons/Leave"]
layout_mode = 0
offset_left = 2.0
offset_top = -3.0
offset_right = 140.0
offset_bottom = 22.0
theme_override_fonts/font = ExtResource("11_5bjlr")
theme_override_font_sizes/font_size = 28
text = "LEAVE"

[node name="Labels" type="Node" parent="MainMenu"]

[node name="Sprite2D4" type="Sprite2D" parent="MainMenu/Labels"]
position = Vector2(203, 42)
rotation = 2.05635
scale = Vector2(4, 4)
texture = ExtResource("13_q5hjd")

[node name="Label2" type="Label" parent="MainMenu/Labels"]
offset_left = 364.0
offset_top = 290.0
offset_right = 421.0
offset_bottom = 313.0
theme_override_fonts/font = ExtResource("14_r6ymo")
theme_override_font_sizes/font_size = 10
text = "V.1.0"

[node name="Label" type="Label" parent="MainMenu/Labels"]
offset_left = 154.0
offset_top = 70.0
offset_right = 194.0
offset_bottom = 93.0

[node name="Label4" type="Label" parent="MainMenu/Labels"]
offset_left = 2.0
offset_top = 3.0
offset_right = 272.0
offset_bottom = 136.0
theme_override_colors/font_color = Color(0.141176, 0.141176, 0.141176, 1)
theme_override_fonts/font = ExtResource("14_r6ymo")
theme_override_font_sizes/font_size = 64
text = "TIME
TASKER"

[node name="Label3" type="Label" parent="MainMenu/Labels"]
offset_left = 7.0
offset_top = 3.0
offset_right = 151.0
offset_bottom = 108.0
theme_override_fonts/font = ExtResource("14_r6ymo")
theme_override_font_sizes/font_size = 64
text = "TIME
TASKER"

[node name="Sprites" type="Node" parent="MainMenu"]

[node name="Sprite2D" type="Sprite2D" parent="MainMenu/Sprites"]
position = Vector2(301, 185)
rotation = -0.769449
scale = Vector2(4, 4)
texture = ExtResource("15_yq7xy")

[node name="Sprite2D3" type="Sprite2D" parent="MainMenu/Sprites"]
position = Vector2(152, 287)
rotation = 0.322659
scale = Vector2(4, 4)
texture = ExtResource("16_31hsw")

[node name="Laser" type="Sprite2D" parent="MainMenu/Sprites"]
position = Vector2(288, 135)
rotation = -0.723606
scale = Vector2(1.5, 1.5)
texture = ExtResource("17_i84o2")

[node name="Laser2" type="Sprite2D" parent="MainMenu/Sprites"]
position = Vector2(256, 171)
rotation = -0.769637
scale = Vector2(1.5, 1.5)
texture = ExtResource("17_i84o2")

[node name="Laser3" type="Sprite2D" parent="MainMenu/Sprites"]
position = Vector2(199, 231)
rotation = 0.317163
scale = Vector2(1.5, 1.5)
texture = ExtResource("17_i84o2")

[node name="Laser4" type="Sprite2D" parent="MainMenu/Sprites"]
position = Vector2(142, 234)
rotation = 0.336956
scale = Vector2(1.5, 1.5)
texture = ExtResource("17_i84o2")

[node name="Asteroid12" type="Sprite2D" parent="MainMenu/Sprites"]
position = Vector2(99, 259)
rotation = -0.619952
scale = Vector2(1.4, 1.4)
texture = ExtResource("18_ow1pk")

[node name="Asteroid7" type="Sprite2D" parent="MainMenu/Sprites"]
position = Vector2(151, 137)
rotation = -0.584509
texture = ExtResource("19_84kgb")

[node name="Asteroid1" type="Sprite2D" parent="MainMenu/Sprites"]
position = Vector2(348, 77)
rotation = 1.78808
scale = Vector2(3, 3)
texture = ExtResource("20_bxfs2")

[node name="Asteroid8" type="Sprite2D" parent="MainMenu/Sprites"]
position = Vector2(263, 10)
texture = ExtResource("19_84kgb")

[node name="Asteroid13" type="Sprite2D" parent="MainMenu/Sprites"]
position = Vector2(212, 198)
rotation = 0.481042
scale = Vector2(2, 2)
texture = ExtResource("18_ow1pk")

[node name="Credits" parent="." instance=ExtResource("21_2kvha")]
visible = false

[node name="Theme" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_thh64")
autoplay = true

[node name="Settings" parent="." instance=ExtResource("22_pserw")]

[connection signal="button_up" from="MainMenu/Buttons/Play" to="." method="_on_play_button_up"]
[connection signal="button_up" from="MainMenu/Buttons/Credits" to="." method="_on_credits_button_up"]
[connection signal="button_up" from="MainMenu/Buttons/Leave" to="." method="_on_leave_button_up"]
[connection signal="back_from_credits" from="Credits" to="." method="_on_credits_back_from_credits"]
